<resources>
    <string name="app_name">CUPS Audit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explain"><font size="12">If Checked Please Explain.</font></string>
    <string name="sectionnotes"><font size="12">Enter Notes Here.</font></string>

    <string name="hint_dob">Enter Store Number (All 6 Numbers)</string><string name="hint_password">Password</string><string name="hint_email">Username</string><string name="hint_gender">I am</string><string name="male">Male</string><string name="female">Female</string><string name="btn_sign_up">Register !!</string><string name="err_msg_name">Please enter a Name</string><string name="err_msg_required">Valid Input Required</string><string name="err_msg_email">Please enter a Valid Email</string><string name="err_msg_password">Enter a Password</string><string name="err_msg_dob">Enter a valid Store Number</string><string name="btn_login">Login</string><string name="btn_link_signup">Don\'t have an account yet Register !!</string><string name="btn_link_login">Already have an account Login !!</string>

</resources>
